# fusionctl

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-binaries.yml  publish-apt-repo.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: distribution.md  fusionctl.1  usage.md
packaging/: fusion_entry.py
scripts/: build_apt_repo.py  build_standalone.py  clean_artifacts.py  package_linux.py
specs/001-oracle-timesheet-cli/: data-model.md  oracle-api-reference.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-oracle-timesheet-cli/contracts/: cli-schema.md  oracle-openapi-timecards.json
src/fusionctl/: __init__.py  config.py  exceptions.py  main.py
src/fusionctl/api/: __init__.py  endpoints.py  oracle_client.py
src/fusionctl/cli/: runtime.py  utils.py
src/fusionctl/models/: __init__.py  project.py  session.py  timesheet.py
src/fusionctl/services/: auth_service.py  browser_auth_service.py  holiday_calendar.py  log_periods.py  timecard_execution.py  timecard_payloads.py  timecard_rules.py
tests/: conftest.py
tests/contract/: test_auth_commands.py  test_root_options.py  test_timesheet_commands.py
tests/unit/: test_auth_service.py  test_browser_auth_service.py  test_holiday_calendar.py  test_log_periods.py  test_models.py  test_oracle_client.py  test_timecard_execution.py  test_timecard_payloads.py  test_timecard_rules.py
tools/: recon_oracle.py
(+5 files in other folders)
