[tool.poetry]
name = "fusionctl"
version = "1.1.1"
description = "Oracle Fusion Timesheet CLI"
authors = ["Dorin Cobzac"]
readme = "README.md"
packages = [{ include = "fusionctl", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
typer = { extras = ["all"], version = "^0.20.0" }
httpx = "^0.28.1"
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
rich = "^14.2.0"
keyring = "^25.7.0"
orjson = "^3.11.0"
playwright = "^1.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-vcr = "^1.0.2"
ruff = "^0.14.0"
mypy = "^1.19.0"
poethepoet = "^0.38.0"
pyinstaller = "^6.20.0"

[tool.poetry.scripts]
fusion = "fusionctl.main:run"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"
clean = "python scripts/clean_artifacts.py"
bundle = ["clean", { cmd = "python scripts/build_standalone.py" }]
bundle-onedir = ["clean", { cmd = "python scripts/build_standalone.py --onedir" }]
package-linux = "python scripts/package_linux.py"
apt-repo = "python scripts/build_apt_repo.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
